--- a/default.css
+++ b/default.css
@@ -75,6 +75,9 @@ h5 {
 h6 {
   font-size: 16px;
 }
+img {
+  width: 100%;
+}
 
 .s1 {
   background-color: var(--mainColor);
@@ -427,7 +430,8 @@ h6 {
 
 @media screen and (max-width: 1200px) {
   .main-container {
-    width: 95%;
+    width: 90%;
+    margin-bottom: 2rem;
   }
 }
 
