--- a/default.css
+++ b/default.css
@@ -317,6 +317,7 @@ img {
 
 #social_img {
   width: 100%;
+  margin-top: 2rem;
 }
 
 .post-wrapper {
@@ -415,6 +416,10 @@ img {
 .c-a-images-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+}
+
+.find_me_title {
+  margin-top: 4rem;
 }
 
 @media screen and (max-width: 1435px) {
