--- a/default.css
+++ b/default.css
@@ -429,6 +429,15 @@ img {
   margin-top: 1rem;
   margin-left: 2.5rem;
 }
+
+.todo-image {
+  margin-top: 2rem;
+}
+
+.adopt_me_images {
+  margin-top: 4rem;
+  margin-bottom: 2rem;
+}
 @media screen and (max-width: 1435px) {
   .c-a-images-container {
     grid-template-columns: 1fr 1fr;
