--- a/default.css
+++ b/default.css
@@ -339,6 +339,10 @@ hr {
   background-color: var(--previewShadow);
 }
 
+#skills ul {
+  padding-left: 0;
+}
+
 #social_img {
   width: 100%;
   margin-top: 2rem;
