--- a/default.css
+++ b/default.css
@@ -371,7 +371,8 @@ hr {
 }
 
 .post-preview {
-  background-color: #fff;
+  /* background-color: #fff; */
+  background-color: #f0ead9;
   padding: 15px;
 }
 
