--- a/default.css
+++ b/default.css
@@ -371,8 +371,7 @@ hr {
 }
 
 .post-preview {
-  /* background-color: #fff; */
-  background-color: #f0ead9;
+  background-color: #fff;
   padding: 15px;
 }
 
