--- a/default.css
+++ b/default.css
@@ -458,8 +458,15 @@ hr {
 .github-projects {
   margin-bottom: 1rem;
   margin-top: 1rem;
-  margin-left: 1rem;
-  font-size: 2.3rem;
+  margin-left: 2rem;
+  font-size: 2rem;
+}
+
+.external-link {
+  font-size: 1.7rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  margin-left: 3rem;
 }
 
 .todo-image {
