--- a/default.css
+++ b/default.css
@@ -488,7 +488,14 @@ hr {
 .adopt-me-images {
   margin-bottom: 13rem;
 }
-
+.projectTitle {
+  margin-top: 3rem;
+}
+.projectDescription {
+  line-height: 1.7rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
 @media screen and (max-width: 1435px) {
   .c-a-images-container {
     grid-template-columns: 1fr 1fr;
